objects/Matter_Relation__c.object
<CustomObject>
    <fields>
        <fullName>Matter1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter1</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Matter Relations</relationshipLabel>
        <relationshipName>Matter_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Matter Relations (Matter2)</relationshipLabel>
        <relationshipName>Matter_Relations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Constraint__c</fullName>
        <label>Unique Constraint</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <label>Matter Relation</label>
    <nameField>
        <label>Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matter Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>